k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moto-1-deployment
  labels:
    app: moto-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moto-1
  template:
    metadata:
      labels:
        app: moto-1
    spec:
      containers:
      - name: web
        image: registry.digitalocean.com/moto-1/3ebd9157913864b591ba330188b98c05115670ed:latest
        #imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "50m"
            memory: "100Mi"
          limits:
            memory: "200Mi"
            cpu: "100m"
