k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moto-1-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: moto-1
