k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moto-1-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - whatbikeswin.com
    - www.whatbikeswin.com
    secretName: moto-tls
  rules:
    - host: whatbikeswin.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: moto-1-service
              port:
                number: 8000
    - host: www.whatbikeswin.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: moto-1-service
              port:
                number: 8000
